# FinancialIntelligenceBot

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
app/: logger.py  main.py
app/config/: settings.py
app/core/: graph.py  rag_process.py
app/database/: database.py
app/route/: chat.py  upload.py
app/schema/: models.py
app/services/: chat_service.py  excel_process.py  pdf_doc_process.py  upload_service.py
