[project]
name = "financialchatbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.116.1",
    "motor>=3.7.1",
    "mysql-connector-python>=9.4.0",
    "openpyxl>=3.1.5",
    "pandas>=2.3.2",
    "pydantic-settings>=2.10.1",
    "python-multipart>=0.0.20",
    "sqlalchemy>=2.0.43",
    "uvicorn>=0.35.0",
]
